Backend: docs on project creation are fixed
