# backend/docs/swagger.yaml
@@ -190,10 +190,10 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
-            $ref: '#/definitions/dto.OkResponse'
+            $ref: '#/definitions/dto.ProjectView'
         "400":
           description: Bad Request
           schema:
